--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -73,12 +73,12 @@ env:
   # 固定版本资源地址
   IMMORTALWRT_VERSION: "24.10.2"
   ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
-  PACKAGES_REPO: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic/"  # 修复路径拼写错误（packages后添加/）
-  # 必需的USB网卡驱动包（覆盖常见芯片型号）
+  PACKAGES_REPO: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic/"
+  # 必需的USB网卡驱动包
   REQUIRED_DRIVERS: "kmod-usb-net kmod-usb-net-rtl8152 kmod-usb-net-rtl8153 kmod-usb-net-cdc-ether kmod-usb-net-asix kmod-usb-net-asix-ax88179 kmod-usb-net-rtl8812au kmod-usb-net-rtl88x2bu"
-  # 编译依赖保障（确保opkg工具链完整）
+  # 编译依赖
   BUILD_DEPENDS: "opkg-utils curl wget tar gzip lz4 cpio kmod"
-  # 管理地址设置
+  # 管理地址
   MANAGE_IP: "192.168.11.1"
 
 jobs:
@@ -90,7 +90,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Initialization environment (with full dependencies)
+      - name: Initialization environment (fixed opkg-utils issue)
         id: init
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -102,15 +102,38 @@ jobs:
           sudo swapoff -a
           sudo rm -f /swapfile /mnt/swapfile
 
-          # 关键修复：确保universe源正确添加并立即更新
-          sudo add-apt-repository universe -y
-          sudo apt-get update -y --fix-missing  # 添加源后立即更新，确保能找到opkg-utils
+          # 关键修复：更换为官方Ubuntu源并强制启用universe
+          sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
+          echo "deb http://archive.ubuntu.com/ubuntu jammy main universe restricted multiverse" | sudo tee /etc/apt/sources.list
+          echo "deb http://archive.ubuntu.com/ubuntu jammy-updates main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
+          echo "deb http://archive.ubuntu.com/ubuntu jammy-security main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
 
-          # 安装完整依赖（优先确保opkg-utils可用）
+          # 强制更新源并修复缓存
+          sudo apt-get clean
+          sudo apt-get update -y --fix-missing --allow-insecure-repositories
+
+          # 卸载冲突包
           sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
-          # 优先单独安装opkg-utils，确保其成功
-          sudo -E apt-get -y install opkg-utils
-          # 安装其他基础依赖和编译工具链
+
+          # 单独安装opkg-utils（增加重试机制）
+          echo "Installing opkg-utils..."
+          for i in {1..3}; do
+            if sudo apt-get -y install opkg-utils; then
+              echo "opkg-utils installed successfully"
+              break
+            else
+              echo "Retry $i/3 to install opkg-utils..."
+              sudo apt-get update -y --fix-missing
+            fi
+          done
+
+          # 验证opkg-utils是否安装成功
+          if ! command -v opkg-utils &> /dev/null; then
+            echo "Error: opkg-utils still not found after 3 retries"
+            exit 1
+          fi
+
+          # 安装其他依赖
           sudo -E apt-get -y install $(curl -fsSL https://tinyurl.com/ubuntu2204-make-openwrt)
           sudo -E apt-get -y install ${{ env.BUILD_DEPENDS }}
           sudo -E systemctl daemon-reload
@@ -136,29 +159,19 @@ jobs:
           sudo chown -R runner.runner /builder
           df -Th
 
-      - name: Download Immortalwrt 24.10.2 rootfs (fixed version)
+      - name: Download Immortalwrt 24.10.2 rootfs
         id: down
         working-directory: /builder
         if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
         run: |
-          # 创建输出目录
           mkdir -p openwrt/output
-          # 下载指定版本rootfs（带校验机制）
-          echo "Downloading ImmortalWrt 24.10.2 rootfs..."
           wget -q --show-progress --no-check-certificate "${ROOTFS_URL}" -O "openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz"
-          if [ $? -ne 0 ]; then
-            echo "Failed to download rootfs from ${ROOTFS_URL}"
+          if [ $? -ne 0 ] || [ ! -s "openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz" ]; then
+            echo "Failed to download rootfs"
             exit 1
           fi
-          # 验证文件完整性（简单校验）
-          if [ ! -s "openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz" ]; then
-            echo "Downloaded rootfs file is empty"
-            exit 1
-          fi
-          # 建立必要的符号链接
           ln -sf /builder/openwrt ${GITHUB_WORKSPACE}/openwrt
           ln -sf /builder/openwrt /home/runner/work/_actions/ophub/amlogic-s9xxx-openwrt/main/openwrt
-          # 设置输出标签
           echo "build_tag=ImmortalWrt_24.10.2_s905l3a_dual-kernel_$(date +"%Y%m%d")" >> ${GITHUB_OUTPUT}
           echo "status=success" >> ${GITHUB_OUTPUT}
 
@@ -166,11 +179,10 @@ jobs:
         if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
         working-directory: /builder/openwrt/output
         run: |
-          # 解压rootfs
           mkdir -p rootfs
           tar -zxf immortalwrt-24.10.2-rootfs.tar.gz -C rootfs
           
-          # 清除原有源配置，替换为指定版本的aarch64_generic仓库
+          # 配置软件源
           cat > rootfs/etc/opkg/distfeeds.conf << EOF
           src/gz immortalwrt_core ${PACKAGES_REPO}core
           src/gz immortalwrt_base ${PACKAGES_REPO}base
@@ -180,21 +192,14 @@ jobs:
           src/gz immortalwrt_telephony ${PACKAGES_REPO}telephony
           EOF
           
-          # 修改管理地址为${MANAGE_IP}
-          echo "Changing management IP to ${MANAGE_IP}"
+          # 修改管理IP
           if [ -f "rootfs/etc/config/network" ]; then
-            # 替换lan接口的ip地址
             sed -i "s/option ipaddr '192.168.1.1'/option ipaddr '${MANAGE_IP}'/" rootfs/etc/config/network
-            # 验证修改结果
-            if grep -q "option ipaddr '${MANAGE_IP}'" rootfs/etc/config/network; then
-              echo "Successfully set management IP to ${MANAGE_IP}"
-            else
-              echo "Failed to set management IP"
+            if ! grep -q "option ipaddr '${MANAGE_IP}'" rootfs/etc/config/network; then
+              echo "Failed to set IP"
               exit 1
             fi
           else
-            echo "Network config file not found, creating new one"
-            # 若网络配置文件不存在则创建
             mkdir -p rootfs/etc/config
             cat > rootfs/etc/config/network << EOF
             config interface 'loopback'
@@ -202,7 +207,6 @@ jobs:
                 option proto 'static'
                 option ipaddr '127.0.0.1'
                 option netmask '255.0.0.0'
-
             config interface 'lan'
                 option device 'br-lan'
                 option proto 'static'
@@ -212,36 +216,24 @@ jobs:
             EOF
           fi
           
-          # 验证源配置正确性
-          if ! grep -q "aarch64_generic" rootfs/etc/opkg/distfeeds.conf; then
-            echo "Failed to set correct aarch64_generic repository"
-            exit 1
-          fi
-          # 确保opkg配置文件存在
-          if [ ! -f "rootfs/usr/bin/opkg" ]; then
-            echo "opkg tool not found in rootfs, ensure this is an opkg-based system"
+          if ! grep -q "aarch64_generic" rootfs/etc/opkg/distfeeds.conf || [ ! -f "rootfs/usr/bin/opkg" ]; then
+            echo "Invalid opkg config"
             exit 1
           fi
 
-      - name: Install USB network drivers (pre-load for both kernels)
+      - name: Install USB network drivers
         if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
         working-directory: /builder/openwrt/output
         run: |
-          # 准备opkg环境
           mkdir -p rootfs/tmp/opkg-lists
-          # 复制dns配置确保联网
           cp /etc/resolv.conf rootfs/etc/resolv.conf
-          # 安装驱动（强制刷新源并安装）
-          echo "Installing required USB network drivers: ${REQUIRED_DRIVERS}"
           chroot rootfs /bin/sh -c "opkg update && opkg install ${REQUIRED_DRIVERS}"
-          # 验证驱动是否安装成功
           for driver in ${REQUIRED_DRIVERS}; do
             if ! chroot rootfs /bin/sh -c "opkg list-installed | grep -q ${driver}"; then
               echo "Failed to install driver: ${driver}"
               exit 1
             fi
           done
-          # 重新打包rootfs（包含已安装的驱动和修改的配置）
           rm -f immortalwrt-24.10.2-rootfs.tar.gz
           tar -zcf immortalwrt-24.10.2-rootfs.tar.gz -C rootfs .
 
@@ -250,13 +242,12 @@ jobs:
         uses: ophub/amlogic-s9xxx-openwrt@main
         with:
           openwrt_path: openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz
-          openwrt_board: ${{ inputs.openwrt_board }}  # 强制s905l3a
-          openwrt_kernel: ${{ inputs.openwrt_kernel }}  # 双内核组合
-          auto_kernel: ${{ inputs.auto_kernel }}  # 禁用自动更新
-          kernel_repo: ${{ inputs.kernel_repo }}  # 指定flippy仓库
-          kernel_usage: ${{ inputs.kernel_usage }}  # 使用neih标签
+          openwrt_board: ${{ inputs.openwrt_board }}
+          openwrt_kernel: ${{ inputs.openwrt_kernel }}
+          auto_kernel: ${{ inputs.auto_kernel }}
+          kernel_repo: ${{ inputs.kernel_repo }}
+          kernel_usage: ${{ inputs.kernel_usage }}
           builder_name: ${{ inputs.builder_name }}
-          # 强制内核版本匹配
           kernel_version: "6.1.147,6.12.41-flippy-93+"
 
       - name: Upload the packaged OpenWrt
@@ -266,14 +257,11 @@ jobs:
           tag: ${{ steps.down.outputs.build_tag }}
           artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
           allowUpdates: true
-          removeArtifacts: false
-          replacesArtifacts: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
             ### ImmortalWrt 24.10.2 for s905l3a (Dual Kernel)
             - Kernel versions: 6.1.147 & 6.12.41-flippy-93+
-            - Pre-installed USB network drivers: ${{ env.REQUIRED_DRIVERS }}
-            - Software repository: ${{ env.PACKAGES_REPO }} (aarch64_generic, opkg format)
+            - Pre-installed USB drivers: ${{ env.REQUIRED_DRIVERS }}
+            - Repo: ${{ env.PACKAGES_REPO }}
             - Default IP: ${{ env.MANAGE_IP }}
-            - Default credentials: root / password
-            - Note: Drivers are pre-loaded for both kernels to avoid missing after kernel switch
+            - Credentials: root / password
