--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -76,8 +76,8 @@ env:
   PACKAGES_REPO: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic/"
   # 必需的USB网卡驱动包
   REQUIRED_DRIVERS: "kmod-usb-net kmod-usb-net-rtl8152 kmod-usb-net-rtl8153 kmod-usb-net-cdc-ether kmod-usb-net-asix kmod-usb-net-asix-ax88179 kmod-usb-net-rtl8812au kmod-usb-net-rtl88x2bu"
-  # 编译依赖
-  BUILD_DEPENDS: "opkg-utils curl wget tar gzip lz4 cpio kmod"
+  # 编译依赖（移除opkg-utils，单独处理）
+  BUILD_DEPENDS: "curl wget tar gzip lz4 cpio kmod"
   # 管理地址
   MANAGE_IP: "192.168.11.1"
 
@@ -102,11 +102,18 @@ jobs:
           sudo swapoff -a
           sudo rm -f /swapfile /mnt/swapfile
 
-          # 关键修复：更换为官方Ubuntu源并强制启用universe
+          # 关键修复：使用完整的Ubuntu官方源配置
           sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
-          echo "deb http://archive.ubuntu.com/ubuntu jammy main universe restricted multiverse" | sudo tee /etc/apt/sources.list
-          echo "deb http://archive.ubuntu.com/ubuntu jammy-updates main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
-          echo "deb http://archive.ubuntu.com/ubuntu jammy-security main universe restricted multiverse" | sudo tee -a /etc/apt/sources.list
+          cat << EOF | sudo tee /etc/apt/sources.list
+          deb http://archive.ubuntu.com/ubuntu/ jammy main restricted universe multiverse
+          deb-src http://archive.ubuntu.com/ubuntu/ jammy main restricted universe multiverse
+          deb http://archive.ubuntu.com/ubuntu/ jammy-updates main restricted universe multiverse
+          deb-src http://archive.ubuntu.com/ubuntu/ jammy-updates main restricted universe multiverse
+          deb http://archive.ubuntu.com/ubuntu/ jammy-security main restricted universe multiverse
+          deb-src http://archive.ubuntu.com/ubuntu/ jammy-security main restricted universe multiverse
+          deb http://archive.ubuntu.com/ubuntu/ jammy-backports main restricted universe multiverse
+          deb-src http://archive.ubuntu.com/ubuntu/ jammy-backports main restricted universe multiverse
+          EOF
 
           # 强制更新源并修复缓存
           sudo apt-get clean
@@ -115,21 +122,29 @@ jobs:
           # 卸载冲突包
           sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
 
-          # 单独安装opkg-utils（增加重试机制）
-          echo "Installing opkg-utils..."
-          for i in {1..3}; do
-            if sudo apt-get -y install opkg-utils; then
-              echo "opkg-utils installed successfully"
-              break
-            else
-              echo "Retry $i/3 to install opkg-utils..."
-              sudo apt-get update -y --fix-missing
-            fi
-          done
+          # 安装编译工具（为源码安装做准备）
+          sudo apt-get install -y build-essential git autoconf automake libtool
+
+          # 尝试通过apt安装opkg-utils
+          echo "Trying to install opkg-utils via apt..."
+          if sudo apt-get -y install opkg-utils; then
+            echo "opkg-utils installed successfully via apt"
+          else
+            echo "Failed to install opkg-utils via apt, trying source installation..."
+            # 从源码编译安装opkg-utils
+            git clone https://git.yoctoproject.org/git/opkg-utils
+            cd opkg-utils
+            ./autogen.sh
+            ./configure
+            make
+            sudo make install
+            cd ..
+            rm -rf opkg-utils
+          fi
 
           # 验证opkg-utils是否安装成功
           if ! command -v opkg-utils &> /dev/null; then
-            echo "Error: opkg-utils still not found after 3 retries"
+            echo "Error: opkg-utils still not found after all attempts"
             exit 1
           fi
 
