--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -1,6 +1,6 @@
 #=====================================================================================
 # https://github.com/ophub/amlogic-s9xxx-openwrt
-# Description: Build ImmortalWrt 24.10.2 for s905l3a with dual kernels (最终解决方案)
+# Description: Build ImmortalWrt 24.10.2 for s905l3a with dual kernels (彻底移除opkg-utils依赖)
 #=====================================================================================
 
 name: Build ImmortalWrt 24.10.2 for s905l3a
@@ -72,5 +72,4 @@ env:
   TZ: Asia/Shanghai
   # 固定版本资源地址
   IMMORTALWRT_VERSION: "24.10.2"
-  ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
-  PACKAGES_REPO:
+  ROOTFS_URL: "https://downloads.immortalwrt.org/releases
